force-app/main/default/objects/Shopify_Order__c/Shopify_Order__c.object-meta.xml
<CustomObject>
    <label>Shopify Order</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shopify Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>