force-app/main/default/objects/Shopify_Order__c/fields/Accepts_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Marketing__c</fullName>
    <label>Accepts Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>