force-app/main/default/objects/Shopify_Order__c/fields/Billing_Address1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address1__c</fullName>
    <label>Billing Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>