force-app/main/default/objects/Shopify_Order__c/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <label>Billing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>