force-app/main/default/objects/Shopify_Order__c/fields/Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone__c</fullName>
    <label>Billing Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>