force-app/main/default/objects/Shopify_Order__c/fields/Billing_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_Province__c</fullName>
    <label>Billing Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>