force-app/main/default/objects/Shopify_Order__c/fields/Billing_Province_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Province_Name__c</fullName>
    <label>Billing Province Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>