force-app/main/default/objects/Shopify_Order__c/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <formula>Contact__r.Owner.FirstName + &quot; &quot; + Contact__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner</label>
    <type>Text</type>
</CustomField>