force-app/main/default/objects/Shopify_Order__c/fields/Created_at__c.field-meta.xml
<CustomField>
    <fullName>Created_at__c</fullName>
    <label>Created at</label>
    <type>DateTime</type>
</CustomField>