force-app/main/default/objects/Shopify_Order__c/fields/Created_at_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Created_at_Date_Only__c</fullName>
    <formula>DATEVALUE(Created_at__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created at Date Only</label>
    <type>Date</type>
</CustomField>