force-app/main/default/objects/Shopify_Order__c/fields/Customer_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Date__c</fullName>
    <formula>Contact__r.Account.Customer_Acquisition_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Acquisition Date</label>
    <type>Date</type>
</CustomField>