force-app/main/default/objects/Shopify_Order__c/fields/Fulfilled_at__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_at__c</fullName>
    <label>Fulfilled at</label>
    <type>DateTime</type>
</CustomField>