force-app/main/default/objects/Shopify_Order__c/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <label>Fulfillment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>