force-app/main/default/objects/Shopify_Order__c/fields/Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Order_Cost__c</fullName>
    <label>Order Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>