force-app/main/default/objects/Shopify_Order__c/fields/Paid_at__c.field-meta.xml
<CustomField>
    <fullName>Paid_at__c</fullName>
    <label>Paid at</label>
    <type>DateTime</type>
</CustomField>