force-app/main/default/objects/Shopify_Order__c/fields/Shipping_Address1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address1__c</fullName>
    <label>Shipping Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>