force-app/main/default/objects/Shopify_Order__c/fields/Shipping_Phone__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Phone__c</fullName>
    <label>Shipping Phone</label>
    <type>Phone</type>
</CustomField>