force-app/main/default/objects/Shopify_Order__c/fields/Shopify_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Id__c</fullName>
    <label>Shopify Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>