force-app/main/default/objects/Shopify_Order__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>