force-app/main/default/objects/Shopify_Order__c/fields/Won_Op_Amount__c.field-meta.xml
<CustomField>
    <fullName>Won_Op_Amount__c</fullName>
    <formula>IF(AND(   ISPICKVAL(Won_Opportunity__r.StageName,&apos;Closed Won&apos;), Won_Opportunity__r.Amount&gt;0), Won_Opportunity__r.Amount,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Op Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>