force-app/main/default/objects/Shopify_Order__c/fields/Won_Op_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Won_Op_Close_Date__c</fullName>
    <formula>Won_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Op Close Date</label>
    <type>Date</type>
</CustomField>