force-app/main/default/objects/Shopify_Order__c/fields/Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Won Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shopify Orders</relationshipLabel>
    <relationshipName>Shopify_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>