force-app/main/default/objects/Shopify_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Fulfillment_Status__c</columns>
    <columns>Accepts_Marketing__c</columns>
    <columns>Total__c</columns>
    <columns>Discount_Code__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Created_at__c</columns>
    <columns>Billing_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Shipping_City__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>